tests/compile-fail/integration_suite__integration__ecl_features__diff_label_in_non_ecl.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: difficulty is not supported in this format
   ┌─ <input>:28:5
   │
28 │     {"012"}: int x = 1;
   │     ^^^^^^^^ difficulty label


